log
Sun, May  4, 2025  5:03:46 PM: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sun, May  4, 2025  5:10:19 PM: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  11|6
total_score: 15/70
9d6a7a6
Sun, May  4, 2025  5:20:36 PM: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  13|5
total_score: 25/70
297ab4a
Sun, May  4, 2025  5:26:30 PM: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
69bfb77
Sun, May  4, 2025  5:26:57 PM: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
4a10fcd
Sun, May  4, 2025  5:41:19 PM: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c:169:8: error: redefinition of 'nextTreeMap'
 Pair * nextTreeMap(TreeMap * tree) {
        ^~~~~~~~~~~
treemap.c:149:8: note: previous definition of 'nextTreeMap' was here
 Pair * nextTreeMap(TreeMap * tree) {
        ^~~~~~~~~~~
08f345d
Sun, May  4, 2025  5:41:58 PM: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c:146:8: error: redefinition of 'firstTreeMap'
 Pair * firstTreeMap(TreeMap * tree) {
        ^~~~~~~~~~~~
treemap.c:142:8: note: previous definition of 'firstTreeMap' was here
 Pair * firstTreeMap(TreeMap * tree) {
        ^~~~~~~~~~~~
12d5432
Sun, May  4, 2025  5:42:26 PM: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  25|1
total_score: 60/70
0c01d39
